--- a/stylesheet/contact.css
+++ b/stylesheet/contact.css
@@ -91,3 +91,7 @@ h4.instagram a:hover {
   width: 100vw;
   height: auto;
 }
+
+.container_one.contactpage{
+  height: 105vh;
+}
